--- a/portfolio.html
+++ b/portfolio.html
@@ -12,10 +12,6 @@
     />
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-    />
-    <link
-      rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
     />
     <link rel="stylesheet" href="./css/styles.css" />
@@ -24,7 +20,7 @@
     <!--HEADER-->
     <header class="page-header">
       <div class="container main-nav">
-        <a class="logo animate__heartBeat" href="./index.html" lang="en">
+        <a class="logo" href="./index.html" lang="en">
           <span class="logo-accent">Web</span>Studio</a
         >
         <nav>
